--- a/templates/run_smoke_test.sh.erb
+++ b/templates/run_smoke_test.sh.erb
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-while curl -s -o /dev/null -w "%{http_code}" localhost:<%=tomcat_port%> | grep -v 200; do 
+while curl -L -s -o /dev/null -w "%{http_code}" localhost:<%=tomcat_port%> | grep -v 200; do 
   echo Waiting for <%=application_name%> to respond...
   sleep 2
 done
