--- a/templates/server.xml.erb
+++ b/templates/server.xml.erb
@@ -31,6 +31,7 @@
   <Listener className="org.apache.catalina.core.JreMemoryLeakPreventionListener" />
   <Listener className="org.apache.catalina.mbeans.GlobalResourcesLifecycleListener" />
   <Listener className="org.apache.catalina.core.ThreadLocalLeakPreventionListener" />
+  <Listener className="org.apache.catalina.mbeans.JmxRemoteLifecycleListener" rmiRegistryPortPlatform="<%=jmxRegistryPort%>" rmiServerPortPlatform="<%=jmxServerPort %>" />
 
   <!-- Global JNDI resources
        Documentation at /docs/jndi-resources-howto.html
