--- a/templates/list-applications.sh.erb
+++ b/templates/list-applications.sh.erb
@@ -1,3 +1,3 @@
 #!/bin/bash -e
 
-curl -4 -u <%=tomcat_admin_user%>:<%=tomcat_admin_password%> "http://localhost:8080/manager/text/list"
+curl -4 -u <%=tomcat_admin_user%>:<%=tomcat_admin_password%> "http://localhost:<%=tomcat_port%>/manager/text/list"
