--- a/templates/etc/logrotate.d/tomcat7.erb
+++ b/templates/etc/logrotate.d/tomcat7.erb
@@ -6,3 +6,12 @@
     missingok
     create 0644 <%= tomcat_user %> <%= tomcat_user %>
 }
+
+<%= application_dir %>/logs/*access_log*.txt {
+    copytruncate
+    daily
+    rotate 52
+    compress
+    missingok
+    create 0644 <%= tomcat_user %> <%= tomcat_user %>
+}
