Break backward compatibility by renaming params
Rename jmxServerPort -> jmx_server_port
Rename jmxRegistryPort -> jmx_registry_port

--- a/templates/server.xml.erb
+++ b/templates/server.xml.erb
@@ -31,7 +31,7 @@
   <Listener className="org.apache.catalina.core.JreMemoryLeakPreventionListener" />
   <Listener className="org.apache.catalina.mbeans.GlobalResourcesLifecycleListener" />
   <Listener className="org.apache.catalina.core.ThreadLocalLeakPreventionListener" />
-  <Listener className="org.apache.catalina.mbeans.JmxRemoteLifecycleListener" rmiRegistryPortPlatform="<%=jmxRegistryPort%>" rmiServerPortPlatform="<%=jmxServerPort %>" />
+  <Listener className="org.apache.catalina.mbeans.JmxRemoteLifecycleListener" rmiRegistryPortPlatform="<%=jmx_registry_port%>" rmiServerPortPlatform="<%=jmx_server_port %>" />
 
   <!-- Global JNDI resources
        Documentation at /docs/jndi-resources-howto.html
