--- a/templates/run_smoke_test.sh.erb
+++ b/templates/run_smoke_test.sh.erb
@@ -10,7 +10,7 @@ while curl -L -s -o /dev/null -w "%{http_code}" localhost:<%=tomcat_port%> | gre
   sleep 2
 done
 
-curl -L -s -o /dev/null -w "%{http_code}" localhost:<%=tomcat_port%> | grep 200 > /dev/null
+curl --fail -L -s -o /dev/null -w "%{http_code}" localhost:<%=tomcat_port%> | grep 200 > /dev/null
 if [[ "$?" -eq 0 ]]; then
   echo "Smoke test on <%=application_name%> succeeded"
   exit 0
