--- a/templates/server.xml.erb
+++ b/templates/server.xml.erb
@@ -129,14 +129,11 @@
         <!--
         <Valve className="org.apache.catalina.authenticator.SingleSignOn" />
         -->
-
         <!-- Access log processes all example.
              Documentation at: /docs/config/valve.html
-             Note: The pattern used is equivalent to using pattern="common" -->
         <Valve className="org.apache.catalina.valves.AccessLogValve" directory="logs"
                prefix="localhost_access_log." suffix=".txt"
-               pattern="%h %l %u %t &quot;%r&quot; %s %b" />
-
+               pattern="%h %l %u %t &quot;%r&quot; %s %b %T %{User-Agent}i" 
       </Host>
     </Engine>
   </Service>
