Allow Tomcat cluster configuration override

--- a/templates/server.xml.erb
+++ b/templates/server.xml.erb
@@ -106,9 +106,7 @@
       <!--For clustering, please take a look at documentation at:
           /docs/cluster-howto.html  (simple how to)
           /docs/config/cluster.html (reference documentation) -->
-      <!--
-      <Cluster className="org.apache.catalina.ha.tcp.SimpleTcpCluster"/>
-      -->
+      <%= tomcat_cluster_config %>
 
       <!-- Use the LockOutRealm to prevent attempts to guess user passwords
            via a brute-force attack -->
