--- a/templates/run_smoke_test.sh.erb
+++ b/templates/run_smoke_test.sh.erb
@@ -1,20 +1,10 @@
 #!/bin/bash
 
-COUNTER=0
-while curl -L -s -o /dev/null -w "%{http_code}" localhost:<%=tomcat_port%> | grep -v 200; do
-  echo Waiting for <%=application_name%> to respond...
-  let COUNTER=COUNTER+1
-  if [  $COUNTER -ge 40 ]; then
-    break
-  fi
-  sleep 2
-done
-
-curl --fail -L -s -o /dev/null -w "%{http_code}" localhost:<%=tomcat_port%> | grep 200 > /dev/null
+curl --fail --retry 3 -L -sS -o /dev/null -w "%{http_code}" localhost:<%=tomcat_port%><%=smoke_test_path%> | grep 200 > /dev/null
 if [[ "$?" -eq 0 ]]; then
-  echo "Smoke test on <%=application_name%> succeeded"
+  echo "Smoke test on <%=application_name%> Succeeded"
   exit 0
 else
-  echo "Smoke test on <%=application_name%> failed"
+  echo "Smoke test on <%=application_name%> FAILED!"
   exit 1
 fi
