--- a/templates/server.xml.erb
+++ b/templates/server.xml.erb
@@ -129,12 +129,14 @@
         -->
         <!-- Remote IP Valve: X-forwarded-for -> request.address-->
         <Valve className="org.apache.catalina.valves.RemoteIpValve" />
+        <% unless disable_access_log %>
         <!-- Access log processes all example.
              Documentation at: /docs/config/valve.html -->
         <Valve className="org.apache.catalina.valves.AccessLogValve" directory="logs"
                prefix="localhost_access_log" suffix=".txt"
                pattern="%h %l %u %t &quot;%r&quot; %s %b %T %{User-Agent}i"
 	       rotatable="false" requestAttributesEnabled="true"/>
+        <% end %>
       </Host>
     </Engine>
   </Service>
