--- a/templates/undeploy_with_tomcat_manager.sh.erb
+++ b/templates/undeploy_with_tomcat_manager.sh.erb
@@ -8,5 +8,5 @@ if [ -z "$VERSION" ]; then
 fi
 VERSIONSTRING="&version=$VERSION"
 
-echo "Undeploying <%=application_name%> version: $VERSION"
-curl --fail -4 -s -u <%=tomcat_admin_user%>:<%=tomcat_admin_password%> "http://localhost:<%=tomcat_port%>/manager/text/undeploy?path=/$VERSIONSTRING&tag=<%=application_name%>"
+echo "Undeploying <%=@application_name%> version: $VERSION"
+curl --fail -4 -s -u <%=@tomcat_admin_user%>:<%=@tomcat_admin_password%> "http://localhost:<%=@tomcat_port%>/manager/text/undeploy?path=/$VERSIONSTRING&tag=<%=@application_name%>"
