Use init-script that is more sane

--- a/templates/etc/sysconfig/tomcat7.erb
+++ b/templates/etc/sysconfig/tomcat7.erb
@@ -21,6 +21,9 @@ TOMCAT_LOG=<%= tomcat_log %>
 # Time to wait in seconds, before killing process
 SHUTDOWN_WAIT="10"
 
+# Time to wait in seconds, before announcing process is not up
+STARTUP_WAIT="10"
+
 # Whether to annoy the user with "attempting to shut down" messages or not
 #SHUTDOWN_VERBOSE="false"
 
